--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,7 @@
         <id id="logo">Zayra Jero</id>
         <ul class="nav-links">
           <li><a class="active" href="#projects">Proyectos</a></li>
+          <li><a class="active" href="#skills">Skills</a></li>
           <li><a class="active" href="#contact">Contacto</a></li>
         </ul>
         <div class="burger">
@@ -47,29 +48,40 @@
     </section>
     <section class="projects" id="projects">
       <div class="projects">
-        <h4>DigiTareas</h4>
+        <h4>DigiTareas <a href="https://socialnetwork-68d85.web.app/#"><img class="play1" src="img/play 1.svg" alt="icon-play" /></a> </h4>
         <div class= project1>
         <br>
       <img class="project-digi" src="img/projecto dt.png" alt="project-digi" />
       <p>Es una app web dirigida a los padres de familia <br>
         donde podrán encontrar las tareas escolares, comunicados, <br>
       calendario escolar y un panel de padres, donde ellos se podrán comunicar. </p>
-        </div>
+    <br>
+      
+    </div>
       <br>
-      <h4>Portafolio de maquillaje</h4>
+      <h4>Portafolio de maquillaje <a href="https://socialnetwork-68d85.web.app/#"><img class="play1" src="img/play 1.svg" alt="icon-play" /></a></h4>
       <div class= project2>
         <img class="project-makeup" src="img/projecto mk.png" alt="project-makeup" />
         <p>Es un portafolio web de maquillaje, donde se muestra quién es la maquillista, <br>
         fotos de su trabajo y te puedes poner en contacto vía email. </p>
       </div>
         <br>
-        <h4>Pokémon GO</h4>
+        <h4>Pokémon GO <a href="https://socialnetwork-68d85.web.app/#"><img class="play1" src="img/play 1.svg" alt="icon-play" /></a></h4>
         <div class= project3>
         <img class="project-pm" src="img/projecto pm.png" alt="project-poke" />
       <p>PokémonGo Pokédex es un sitio web que le permite al usuario encontrar  <br>  de manera
         fácil y rápida todos los pokémones de la región de Kanto,  <br> por su tipo, debilidad 
         y demás datos utiles.</p>
       </div>
+      </div>
+    </section>
+    <section class="skills" id="skills">
+      <div class="skills">
+        <img class="icon-skills" src="img/html1.svg" alt="icon-skills" />
+        <img class="icon-skills" src="img/css1.svg" alt="icon-skills" />
+        <img class="icon-skills" src="img/javascript1.svg" alt="icon-skills" /> 
+        <br>
+        <p>continuara...</p>
       </div>
     </section>
     <section class="contact" id="contact">
