--- a/src/index.html
+++ b/src/index.html
@@ -41,9 +41,9 @@
         llevado siempre a buscar nuevos retos y proyectos.
       </p>
       <div class="intro-social">
-        <a href="#"><img src="img/linkedin 1.svg" alt="icon-linkedin" /></a>
-        <a href="#"><img src="img/github 1.svg" alt="icon-github" /></a>
-        <a href="#"><img src="img/behance 1.svg" alt="icon-behance" /></a>
+        <a href="https://www.linkedin.com/in/zayjero/#"><img src="img/linkedin 1.svg" alt="icon-linkedin" /></a>
+        <a href="https://github.com/ZayraJero/#"><img src="img/github 1.svg" alt="icon-github" /></a>
+        <a href="https://www.behance.net/zayjero/#"><img src="img/behance 1.svg" alt="icon-behance" /></a>
       </div>
     </section>
     <section class="projects" id="projects">
@@ -101,9 +101,9 @@
     <h4>Zayra Jero 2020</h4>
     <ul>
       <li>
-        <a href="#"><img src="img/linkedin 1.svg" alt="icon-linkedin" /></a>
-        <a href="#"><img src="img/github 1.svg" alt="icon-github" /></a>
-        <a href="#"><img src="img/behance 1.svg" alt="icon-behance" /></a>
+        <a href="https://www.linkedin.com/in/zayjero/#"><img src="img/linkedin 1.svg" alt="icon-linkedin" /></a>
+        <a href="https://github.com/ZayraJero/#"><img src="img/github 1.svg" alt="icon-github" /></a>
+        <a href="https://www.behance.net/zayjero/#"><img src="img/behance 1.svg" alt="icon-behance" /></a>
       </li>
     </ul>
   </footer>
