--- a/index.html
+++ b/index.html
@@ -59,14 +59,14 @@
       
     </div>
       <br>
-      <h4>Portafolio de maquillaje <a href="https://socialnetwork-68d85.web.app/#"><img class="play1" src="img/play 1.svg" alt="icon-play" /></a></h4>
+      <h4>Portafolio de maquillaje <a href="https://zayrajero.github.io/Portfolio-Makeup-artist/#"><img class="play1" src="img/play 1.svg" alt="icon-play" /></a></h4>
       <div class= project2>
         <img class="project-makeup" src="img/projecto mk.png" alt="project-makeup" />
         <p>Es un portafolio web de maquillaje, donde se muestra quién es la maquillista, <br>
         fotos de su trabajo y te puedes poner en contacto vía email. </p>
       </div>
         <br>
-        <h4>Pokémon GO <a href="https://socialnetwork-68d85.web.app/#"><img class="play1" src="img/play 1.svg" alt="icon-play" /></a></h4>
+        <h4>Pokémon GO <a href="#"><img class="play1" src="img/play 1.svg" alt="icon-play" /></a></h4>
         <div class= project3>
         <img class="project-pm" src="img/projecto pm.png" alt="project-poke" />
       <p>PokémonGo Pokédex es un sitio web que le permite al usuario encontrar  <br>  de manera
